# kryoptic

./: .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  dummy.txt  fips.h  nettle.h  ossl.h  pkcs11.h
.github/: PULL_REQUEST_TEMPLATE.md  codespell.sh
.github/workflows/: build.yml  check-style.yml  docsrs.yml  format.yml  migrate.yml  openjdk-integration.yml  openssl_versions.yml  pkcs11-provider.yml  rpm.yml  style.yml  tools.yml
cdylib/: Cargo.toml  README.md  token.sql
cdylib/src/: lib.rs
cdylib/tests/: rc_common.rs  rc_ecdh.rs  rc_eddsa_compat.rs  rc_login.rs  rc_re_initialize.rs  rust_cryptoki.rs
doc/: User_Guide.md  kryoptic.conf.man.md  kryoptic.man.md  storage-encryption.md
hacl/: README.md
hacl/gcc-compatible/: Makefile  Makefile.include  hacl.h
misc/: ec_gen_test.sh  hmacify.sh  release.sh
ossl/: Cargo.toml  README.md  build.rs  ossl.h
ossl-sys/: Cargo.toml  README.md  build.rs  ossl.h
ossl-sys/src/: lib.rs
ossl/src/: asymcipher.rs  cipher.rs  derive.rs  digest.rs  fips.rs  lib.rs  mac.rs  non-openssl-sys-bindings.rs  pkey.rs  rand.rs  signature.rs
ossl/src/tests/: aes.rs  brainpool.rs  chacha20.rs  cipher.rs  digest.rs  dsa.rs  mod.rs  tripledes.rs
packaging/: kryoptic.spec  rust2rpm.toml
pkcs11/: Cargo.toml  build.rs
pkcs11/headers/3.2-prerelease/: pkcs11.h
pkcs11/src/: lib.rs  vendor.rs
pkcs11_headers/3.2-prerelease/: pkcs11.h
rustls/ossl/: Cargo.toml
rustls/ossl/src/: cipher.rs  hash.rs  hmac.rs  kdf.rs  keyex.rs  lib.rs  pkey.rs  signer.rs  tls12.rs  tls13.rs  verify.rs
rustls/ossl/tests/: basic.rs  common.rs
src/: aes.rs  attribute.rs  config.rs  cryptography.rs  defaults.rs  drbg.rs  ec_montgomery.rs  ecc-misc.rs  ecc.rs  ecc_misc.rs  ecdh.rs  eddsa.rs  enabled.rs  encryption.rs  error.rs  ffdh.rs  ffdh_groups.rs  fips.rs  fips_wrapper.rs  hacl.rs  hash.rs  hkdf.rs  hmac.rs  hotp.rs  interface.rs  kasn1.rs  kdf.rs  lib.rs  log.rs  mechanism.rs  misc.rs  mldsa.rs  mlkem.rs  nettle.rs  nettle_bindings.rs  object.rs  ossl.rs  pbkdf2.rs  rng.rs  rsa.rs  (+13 more)
src/conformance/: main.rs
src/ec/: ecdh.rs  ecdsa.rs  eddsa.rs  mod.rs  montgomery.rs
src/fips/: drbg.rs  hash.rs  indicators.rs  interface.rs  kats.rs  mod.rs  provider.rs  rsa.rs
src/fns/: digest.rs  dualcrypto.rs  encryption.rs  general.rs  keymgmt.rs  mod.rs  objmgmt.rs  sessmgmt.rs  signing.rs  stmgmt.rs
src/hacl/: drbg.rs  hash.rs
src/kasn1/: mod.rs  oid.rs  pkcs.rs
src/kasn1/pyca/: oid.rs  pkcs.rs
src/leancrypto/: common.rs  drbg.rs  kbkdf.rs  mod.rs  pbkdf2.rs
src/native/: hmac.rs  mod.rs  pbkdf2.rs  simplekdf.rs  sp800_108.rs  sshkdf.rs  tlskdf.rs
src/nettle/: rsa.rs
src/object/: certs.rs  factory.rs  key.rs  mod.rs  otp.rs
src/ossl/: aes.rs  aes_mac.rs  common.rs  drbg.rs  ec_montgomery.rs  ecc.rs  ecdh.rs  ecdsa.rs  eddsa.rs  ffdh.rs  fips.rs  hash.rs  hkdf.rs  hmac.rs  kbkdf.rs  kdf.rs  mldsa.rs  mlkem.rs  mod.rs  montgomery.rs  pbkdf2.rs  rsa.rs  slhdsa.rs  sshkdf.rs
src/pkcs11/: extensions.rs  interface.rs  mod.rs  validation_draft.rs  vendor.rs
src/storage/: aci.rs  format.rs  json.rs  json_objects.rs  memory.rs  mod.rs  nssdb.rs  sqlite.rs  sqlite_common.rs
src/storage/nssdb/: attrs.rs  ci.rs  config.rs  mod.rs
src/tests/: aes.rs  aes_cmac_vectors.rs  aes_kw_vectors.rs  attrs.rs  combined.rs  ec_montgomery.rs  ecc.rs  ecdh.rs  ecdh_vectors.rs  eddsa.rs  ffdh.rs  hashes.rs  hotp.rs  init.rs  json_objects.rs  kdf_vectors.rs  kdfs.rs  keys.rs  login.rs  mac_vectors.rs  mechs.rs  mldsa.rs  mlkem.rs  mod.rs  nssdb.rs  objects.rs  pkcs11.rs  random.rs  rsa.rs  session.rs  signatures.rs  simplekdf.rs  slhdsa.rs  tls.rs  token.rs  ts.rs  util.rs
src/tools/softhsm/: migrate.rs  test.sh
testdata/: KASValidityTest_ECCStaticUnified_KDFConcat_NOKC_resp.fax  README.md  rfc8032.txt  rsa.pem  rsa_aes_key_wrap.json  rsa_wrapped_key_softokn.data  test.conf  test_aes_operations.json  test_basic.json  test_basic_ecdsa.json  test_basic_rsa.json  test_ecc_operations.json  test_eddsa_operations.json  test_hashes.json  test_rsa_operations.json  test_sha2.json  test_sign_verify.json  test_sign_verify_ecdsa.json  test_sign_verify_rsa.json
testdata/nssdbdir/: cert9.db  key4.db  pkcs11.txt
testdata/nssdbdir2/: cert9.db  key4.db  pkcs11.txt
testdata/openjdk/: jtreg-kryoptic.sh  openjdk-jtreg-tests.txt  p11-kryoptic.txt  p11-nss-sensitive.txt  p11-nss.txt
testdata/softhsm/tokens/9a19985a-9037-e9df-657d-9947f7ba2120/: 002d1b0a-28a7-7ff4-cd4b-2baa85ed5843.object  06a954d3-893b-2118-04c5-a18320802ee8.object  0b727966-814e-b28c-e2ba-1c19f20feeb7.object  12cf7185-7e43-d60b-6361-d91751961278.object  13c92a43-9f9e-ec1b-dfac-15271f57cbdf.object  158a691f-7767-d8cb-e633-1ce139e783ea.object  186b3b0a-a0c7-67d4-70d1-d87c896ca64a.object  26ea8025-8ed3-0eb8-8a33-843a31c4810d.object  27b30dcb-bf66-648c-3b3c-ac8c82db8104.object  27c0d30a-19fa-dfe0-9c0c-7c26c23f0fdb.object  2b63e9b9-972f-e485-3e9b-f7163111fd2d.object  30b5b125-18c3-4631-8fd4-44aaea871715.object  3543d044-de24-aba0-bb15-16b689c165b6.object  4a3120bc-71b2-441b-a202-9a2f71796187.object  5b6fa7b4-80b1-7253-c2ce-ea90402d3b75.object  602e8d6d-0349-9a5f-67b2-a5a1e17859ba.object  6caf4fbf-421e-7b74-16d3-3bee9061e353.object  6d58cc68-6794-3dab-a4bc-d0fbc4cb9039.object  82f66002-9883-5c7c-157d-1237d7655a03.object  83cd258c-df50-5d9f-12c2-ea46380b777d.object  8a0de478-f3b5-879f-8ac4-fa86eb542846.object  8f9e7269-3d4d-cca9-155e-ad5a3e2b4a6f.object  93986dfa-bda8-db87-1d48-e9b8d3d515b4.object  95551c4d-492f-4a04-6117-972d1776ef91.object  95e40ccc-e88c-b89b-a475-79cd1dca00d2.object  9dfcacfb-44db-185c-cf1a-3d7261ad37c3.object  a07863fa-908e-5d91-4631-00b32b7d8866.object  a39a08e6-6802-09b2-312d-82f12d341b8b.object  (+21 more)
tools/: Cargo.toml  README.md
tools/profiles/: profile-conformance.rs  test.sh
tools/profiles/conformance_lib/: cert_data.rs  executor.rs  mod.rs  pkcs11_wrapper.rs  profile.rs  token_init.rs
tools/softhsm/: Cargo.toml  migrate.rs  softhsm_migrate.man.md  test.sh  test_init.rs  test_signature.rs
