[package]
name = "kryoptic"
version = "1.1.0"
edition = "2021"
description = "A PKCS #11 software token written in Rust"
homepage = "https://github.com/latchset/kryoptic"
repository = "https://github.com/latchset/kryoptic"
license = "GPL-3.0-or-later"

exclude = [
    ".github/*",
    "openssl/*",
]

[lib]
name = "kryoptic_pkcs11"
crate-type = ["cdylib"]

[[bin]]
name = "softhsm_migrate"
path = "src/tools/softhsm/migrate.rs"
test = false

[[bin]]
name = "kryoptic_init"
path = "src/tools/softhsm/test_init.rs"
test = false

[[bin]]
name = "test_signature"
path = "src/tools/softhsm/test_signature.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"

[dependencies]
asn1 = "0.21"
bimap = "0.6.3"
bitflags = "2.4.1"
cfg-if = "1.0.0"
clap = { version = "4.5.26", default-features = false, features = ["cargo", "derive", "help", "std", "usage"] }
constant_time_eq = "0.3.0"
cryptoki = "0.9.0"
data-encoding = "2.4.0"
getrandom = "0.3"
hex = "0.4.3"
itertools = "0.14.0"
libc = "0.2.151"
log = { version = "0.4.27", default-features = false, features = ["std"], optional = true }
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
once_cell = "1.18.0"
rusqlite = { version = "0.31.0", optional = true }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serial_test = "3.1.1"
simplelog = { version = "0.12.2", default-features = false, optional = true }
toml = { version = "0.8.19", default-features = false, features = ["display", "parse"] }
uuid = { version = "1.4.1", features = ["v4"] }
vsprintf = { version = "2.0.0", optional = true }

[features]
aes = []
ecc = []
ecdsa = ["ecc"]
ecdh = ["ecc"]
eddsa = ["ecc"]
ec_montgomery = ["ecc"]
ffdh = []
hash = []
hkdf = ["hmac"]
hmac = ["hash"]
pbkdf2 = ["hmac"]
rsa = []
sp800_108 = []
sshkdf = []
tlskdf = []

# Databases
jsondb = ["memorydb"]
memorydb = ["aes", "hkdf", "pbkdf2"] # for encryption
sqlitedb = ["dep:rusqlite", "aes", "hkdf", "pbkdf2"]
nssdb = ["dep:rusqlite", "aes", "hmac", "pbkdf2"]

default = ["standard", "dynamic"]

ecc_min = ["ecdsa", "ecdh"]
ecc_all = ["ecc_min", "ec_montgomery", "eddsa"]
hash_all = ["hash", "hmac"]
kdf_all = ["hkdf", "pbkdf2", "sp800_108", "sshkdf", "tlskdf"]

standard = ["sqlitedb", "ecc_all", "ffdh", "hash_all", "kdf_all", "rsa"]

ecc_fips = ["ecdsa", "ecdh"]
fips = ["sqlitedb", "rusqlite/bundled", "aes", "ecc_fips", "ffdh", "hash_all", "kdf_all", "rsa", "pqc"]

dynamic = [] # Builds against system libcrypto.so

pkcs11_3_2 = [ ] # Exposes PKCS#11 3.2 Interfaces and new functions

log = ["dep:log", "dep:simplelog", "dep:vsprintf"] #Enables error/info tracing
slow = [] # Enables slow tests

mlkem = ["pkcs11_3_2"]
mldsa = ["pkcs11_3_2", "hash"]

pqc = ["mlkem", "mldsa"]

minimal = ["sqlitedb", "aes", "ecc_min", "hash_all", "rsa"]
