[workspace]
members = ["pkcs11", "ossl", "cdylib", "tools/softhsm"]
default-members = [".", "pkcs11", "ossl", "cdylib"]

[workspace.package]
version = "1.2.0"
edition = "2021"
description = "A PKCS #11 software token written in Rust"
homepage = "https://github.com/latchset/kryoptic"
repository = "https://github.com/latchset/kryoptic"
license = "GPL-3.0-or-later"

[workspace.dependencies]
kryoptic = { version = "1.2.0", path = ".", default-features = false }
ossl = { version = "1.2.0", path = "ossl", default-features = false }
pkcs11 = { version = "1.2.0", path = "pkcs11", default-features = false }

[package]
name = "kryoptic"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

exclude = [
    ".github/*",
    "openssl/*",
]

[lib]
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ossl.workspace = true
pkcs11.workspace = true
asn1 = "0.21"
bimap = "0.6.3"
bitflags = "2.4.1"
constant_time_eq = "0.3.0"
data-encoding = "2.4.0"
hex = "0.4.3"
itertools = "0.14.0"
libc = "0.2.151"
log = { version = "0.4.27", default-features = false, features = ["std"], optional = true }
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
once_cell = "1.18.0"
rusqlite = { version = "0.31.0", optional = true }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serial_test = "3.1.1"
simplelog = { version = "0.12.2", default-features = false, optional = true }
toml = { version = "0.8.19", default-features = false, features = ["display", "parse"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
ossl = { version = "1.2.0", path = "ossl", default-features = false, features = ["dummy-integrity"] }

[features]
aes = []
ecc = []
ecdsa = ["ecc"]
ecdh = ["ecc"]
eddsa = ["ecc", "ossl/ossl320"]
ec_montgomery = ["ecc"]
ffdh = []
hash = []
hkdf = ["hmac"]
hmac = ["hash"]
no_sha1 = []
pbkdf2 = ["hmac"]
rsa = []
sp800_108 = []
sshkdf = []
tlskdf = []

# Databases
memorydb = ["aes", "hkdf", "pbkdf2"] # for encryption
sqlitedb = ["dep:rusqlite", "aes", "hkdf", "pbkdf2"]
nssdb = ["dep:rusqlite", "aes", "hmac", "pbkdf2"]

default = ["standard", "dynamic"]

ecc_min = ["ecdsa", "ecdh"]
ecc_all = ["ecc_min", "ec_montgomery", "eddsa"]
hash_all = ["hash", "hmac"]
kdf_all = ["hkdf", "pbkdf2", "sp800_108", "sshkdf", "tlskdf"]

standard = ["sqlitedb", "ecc_all", "ffdh", "hash_all", "kdf_all", "rsa"]

fips = ["ossl/fips", "sqlitedb", "rusqlite/bundled", "aes", "ecc_all", "ffdh", "hash_all", "kdf_all", "rsa", "pqc"]

dynamic = ["ossl/dynamic"] # Builds against system libcrypto.so

log = ["dep:log", "dep:simplelog", "ossl/log"] # Enables error/info tracing
slow = [] # Enables slow tests

mlkem = ["ossl/ossl350"]
mldsa = ["hash", "ossl/ossl350"]

pqc = ["mlkem", "mldsa"]

minimal = ["sqlitedb", "aes", "ecc_min", "hash_all", "rsa"]
