[package]
name = "kryoptic-dynlib"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "kryoptic_pkcs11"
crate-type = ["cdylib"]

[dependencies]
kryoptic.workspace = true
ossl.workspace = true

[features]
fips = []
