[package]
name = "kryoptic"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "kryoptic_pkcs11"
crate-type = ["cdylib"]

[dependencies]
kryoptic-lib.workspace = true
ossl.workspace = true

[dev-dependencies]
cryptoki = "0.12.0"

[features]
default = ["kryoptic-lib/default"]

ecc_all = ["kryoptic-lib/ecc_all"]
hash_all = ["kryoptic-lib/hash_all"]
kdf_all = ["kryoptic-lib/kdf_all"]
pqc = ["kryoptic-lib/pqc"]

log = ["kryoptic-lib/log"]
minimal = ["kryoptic-lib/minimal"]
nssdb = ["kryoptic-lib/nssdb"]

standard = ["kryoptic-lib/standard"]
fips = ["kryoptic-lib/fips"]
ossl400 = ["kryoptic-lib/ossl400"]

integration_tests = []
