[package]
name = "ossl"
version.workspace = true
edition.workspace = true
description = "OpenSSL version 3+ bindings to modern EVP APIs"
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"

[lib]
test = true

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[dependencies]
bitflags = "2.4.1"
cfg-if = "1.0.0"
libc = "0.2.151"
log = { version = "0.4.27", default-features = false, features = ["std"], optional = true }
vsprintf = { version = "2.0.0", optional = true }
openssl-sys = { version = "0.9", features = ["bindgen"], optional = true }
ossl-sys = { version = "1.5.2", optional = true, path = "../ossl-sys" }

[dev-dependencies]
hex = "0.4.3"
serial_test = "3.1.1"

[features]
default = ["ossl-sys"]

ossl320 = [] # Requires at a minimum OpenSSL 3.2.0
ossl350 = [] # Requires at a minimum OpenSSL 3.5.0
ossl400 = [] # Requires at minimum OpenSSL 4.0

openssl-sys = ["dep:openssl-sys"] # Build against openssl-sys bindings
ossl-sys = ["dep:ossl-sys"] # Build against ossl-sys bindings
dynamic = ["ossl-sys/dynamic"]
fips = ["ossl400", "ossl-sys/fips"]
log = ["dep:log", "dep:vsprintf"] # Error tracing using log crate
rfc9580 = [] # Enables features required for OpenPGP implementations
