[package]
name = "kryoptic-tools"
version.workspace = true
edition.workspace = true
description = "SoftHSM2 db token migration and other tools"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "softhsm_migrate"
path = "softhsm/migrate.rs"

[[bin]]
name = "kryoptic_init"
path = "softhsm/test_init.rs"
test = false

[[bin]]
name = "test_signature"
path = "softhsm/test_signature.rs"
test = false

[dependencies]
clap = { version = "4.5.26", default-features = false, features = ["cargo", "derive", "help", "std", "usage"] }
kryoptic.workspace = true
cryptoki = "0.10.0"
libc = "0.2.151"
