[package]
name = "kryoptic-tools"
version.workspace = true
edition.workspace = true
description = "SoftHSM2 db token migration and other tools"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "softhsm_migrate"
path = "softhsm/migrate.rs"

[[bin]]
name = "kryoptic_init"
path = "softhsm/test_init.rs"
test = false

[[bin]]
name = "test_signature"
path = "softhsm/test_signature.rs"
test = false

[[bin]]
name = "profile_conformance"
path = "profiles/profile-conformance.rs"

[dependencies]
clap = { version = "4.5.26", default-features = false, features = ["cargo", "derive", "help", "std", "usage"] }
kryoptic-lib.workspace = true
cryptoki = "0.10.0"
hex = "0.4.3"
libc = "0.2.151"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
quick-xml = { version = "0.38", features = ["serialize"] }

[features]
default = ["kryoptic-lib/default"]
